--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "psycketom/domworks",
+    "name": "joltmode/domworks",
     "description": "DOMWorks is a Document Object Model wrapper to simplify and enhance working with HTML.",
     "authors": [
         {
