--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,23 @@
 {
     "name": "joltmode/domworks",
     "description": "DOMWorks is a Document Object Model wrapper to simplify and enhance working with HTML.",
+    "license": "MIT",
+    "keywords": [
+        "dom"
+    ],
+    "version": "0.0.1-dev",
+    "homepage": "http://domworks.apitecture.com/",
     "authors": [
         {
             "name": "Toms Seisums",
-            "email": "toms@apitecture.com"
+            "email": "toms@apitecture.com",
+            "role": "Developer",
+            "homepage": "http://joltmode.apitecure.com"
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "zendframework/zend-dom": "*"
     },
     "autoload": {
         "psr-0": {
