--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "zendframework/zend-dom": "*"
+        "symfony/css-selector": "*"
     },
     "autoload": {
         "psr-0": {
